# PageRank

./: .gitignore  README.md  README.txt  main.c
.github/workflows/: cmake-multi-platform.yml
Source/: CMakeLists.txt  function_declarations.h  main.c  main_omp.c
Source/tests/: run_validation.cmake  validate_pagerank.c
